# clacktile

./: .gitignore  LICENSE  README.md  pyproject.toml
src/clacktile/: __init__.py  __main__.py  common.py  counter.py  input.py  static.py  textloader.py  ui_wrapper.py  validator.py
src/clacktile/saved/: dune-01.txt
src/clacktile/style/: layers.tcss
tests/clacktile/: test_validator.py
