[project]
name = "clacktile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["iterdot>=0.2.2", "textual>=0.82.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.18.3",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "textual-dev>=1.6.1",
]


[tool.uv]
upgrade = true
